--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ discord.py==2.2.3
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
+nest-asyncio==1.5.6
 openai==0.27.7
 PyYAML==6.0
 requests==2.30.0
